# fashion-recommender

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
data/output/: attribute_to_idx.pkl  attribute_vectors_dummy.npy  item_names.csv  item_to_idx.pkl  item_vectors_clip.npy  mvp_attr_vectors_clip_text.pt  mvp_captions_with_keywords.csv  mvp_clip_image_embeddings.csv  mvp_cosine_recs.csv  mvp_cosine_recs.json  mvp_enriched_vectors_clip_blip.pt  mvp_euclidean_recs.csv  mvp_euclidean_recs.json  mvp_fashion_graph_data.pt  mvp_gcn_tag_predictor.pt  mvp_item_attr_edge_idx.pt  mvp_node_embeddings_gcn.pt  mvp_zara_blip_captions_updated.csv  node_logits.pt  top_k_faiss_results.csv  top_k_fusion_results.csv  x_tensor_before_enrichment.pt  zara_blip_captions _updated.xlsx  zara_blip_captions.csv  zara_blip_captions.xlsx
data/output/logs/: retrieval_logs.csv
notebooks/: graph-recommender-query-results.ipynb  load-images.ipynb  scratch.ipynb  sl_app.ipynb
src/: evaluation.py  gnn_utils.py  retrieval.py
streamlit-app/: app2.py  old_app.py
